--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="styles.css">
-
+<link rel="stylesheet" type="text/css" href="styles2.css">
 <ul>
  	
  	<li><a href = "login.php">login</a></li>
  	<li><a href = "register.php">Register</a></li>
 <img src="logoNY.jpg" class="mainimg" alt="logo" width="200" height="55"> 
+</ul>
 </head>
 
 <body>
@@ -16,3 +16,4 @@
 </body>
 
 </html>
+
